# FantasyBattle-Refactoring-Kata

./: README.md
.github/: dependabot.yml
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/model/: Armor.cpp  Armor.h  BasicBuff.cpp  BasicBuff.h  BasicItem.cpp  BasicItem.h  Buff.cpp  Buff.h  Damage.cpp  Damage.h  Equipment.cpp  Equipment.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Player.cpp  Player.h  SimpleArmor.cpp  SimpleArmor.h  SimpleEnemy.cpp  SimpleEnemy.h  Stats.cpp  Stats.h  Target.h
cpp/test/: PlayerTest.cpp
csharp/: .gitignore  Damage.cs  Equipment.cs  FantasyBattle.sln  IArmor.cs  IBuff.cs  Inventory.cs  Item.cs  Player.cs  PlayerTest.cs  SimpleEnemy.cs  Stats.cs  Target.cs  lod.csproj  lod.sln  packages.config
csharp/FantasyBattle/: BasicBuff.cs  BasicItem.cs  Damage.cs  Equipment.cs  FantasyBattle.csproj  Inventory.cs  Item.cs  Player.cs  PlayerTest.cs  SimpleArmor.cs  SimpleEnemy.cs  Stats.cs  Target.cs
csharp/FantasyBattle.Tests/: FantasyBattle.Tests.csproj  PlayerTest.cs
csharp/Properties/: AssemblyInfo.cs
go/: .gitignore  armor.go  basic_buff.go  basic_item.go  buff.go  damage.go  equipment.go  go.mod  inventory.go  item.go  player.go  player_test.go  simple_armor.go  simple_enemy.go  stats.go  target.go
java/: .gitignore  pom.xml
java/src/main/java/codingdojo/: Armor.java  BasicBuff.java  BasicItem.java  Buff.java  Damage.java  Item.java  (+9 more)
kotlin/: .gitignore  build.gradle  settings.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
php/: composer.json  phpunit.xml
php/src/: Armor.php  BasicBuff.php  BasicItem.php  Buff.php  Damage.php  Equipment.php  Inventory.php  Item.php  Player.php  SimpleArmor.php  SimpleEnemy.php  Stats.php  Target.php
php/tests/: PlayerTest.php
purescript/: package-lock.json  package.json  packages.dhall  spago.dhall
purescript/src/: Armor.purs  Buff.purs  Damage.purs  Equipment.purs  Inventory.purs  Item.purs  Player.purs  SimpleEnemy.purs  Stats.purs
purescript/test/: Main.purs
python/: Armor.py  Buff.py  Damage.py  Equipment.py  Inventory.py  Item.py  Player.py  Stats.py  Target.py
swift/: Package.swift
swift/FantasyBattle/: Armor.swift  Buff.swift  Damage.swift  Equipment.swift  Inventory.swift  Item.swift  Player.swift  SimpleEnemy.swift  Stats.swift  Target.swift
swift/FantasyBattleTests/: FantasyBattleTests.swift
typescript/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
typescript/src/: Armor.ts  BasicBuff.ts  BasicItem.ts  Buff.ts  Damage.ts  Equipment.ts  Inventory.ts  Item.ts  Player.ts  SimpleArmor.ts  SimpleEnemy.ts  Stats.ts  Target.ts
typescript/tests/: MockPlayer.spec.ts  Player.spec..ts  Player.spec.ts
(+16 files in other folders)
